--- a/Dockerfile_apache2_ubuntu_16.04
+++ b/Dockerfile_apache2_ubuntu_16.04
@@ -1,2 +1,3 @@
 CMD ["nginx", "-g", "daemon off;"]
-EXPOSE 80 CMD ["apache2ctl", "-D", "FOREGROUND"]
+CMD ["apache2ctl", "-D", "FOREGROUND"]
+CMD ["/usr/bin/mysqld_safe"]
