--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,13 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+- task: CmdLine@2
+  inputs:
+    script: |
+      echo Write your commands here
+      
+      echo Hello world
+
 
 - task: Docker@2
   inputs:
