--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,9 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'DockerHUB'
+    repository: 'aftab70/apache2'
+    command: 'push'
