--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,5 +9,5 @@ trigger:
   inputs:
     containerRegistry: 'DockerHUB'
     repository: 'aftab70/apache2'
-    command: 'buildAndPush'
+    command: 'build'
     Dockerfile: '**/Dockerfile'
