Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,15 +13,10 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-
 
 - task: Docker@2
   inputs:
     containerRegistry: 'DockerHUB'
-    repository: 'aftab70/apache2'
+    repository: 'aftab70/php'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
