--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'DockerHUB'
-    repository: 'aftab70/php'
+    repository: 'aftab70/apache2'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
